--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -38,11 +39,14 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "classnames": "latest",
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
+    "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
@@ -55,14 +59,11 @@
     "recharts": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "latest",
+    "tailwindcss": "latest",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "@emotion/is-prop-valid": "latest",
-    "tailwindcss": "latest",
-    "framer-motion": "latest",
-    "classnames": "latest",
-    "tailwind-variants": "latest"
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
