--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cmdk": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
-    "framer-motion": "latest",
+    "framer-motion": "^12.6.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
